# TheAtlasEngine

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  imgui.ini  new_engine3d_nodes.md
Editor/: Application.cpp  CMakeLists.txt  EditorScene.hpp  EditorWorld.cpp  EditorWorld.hpp  LevelScene.cpp  LevelScene.hpp  backup-VulkanDevice.cpp  backup-VulkanSwapchain.cpp  conanfile.py  editor_world.cpp  editor_world.hpp  imgui.ini  level_scene.cpp  level_scene.hpp
Editor/Editor/: Editor.cpp  Editor.h  Editor.hpp  EditorScene.cpp  EditorScene.hpp  EngineLayer.cpp  EngineLayer.h  UILayer.cpp  UILayer.h
Editor/Editor/EditorComponents/: EditorCamera.cpp  EditorCamera.hpp
TestApp/: Application.cpp  CMakeLists.txt
TestApp/SceneTest/Scenes/Assets/Components/: PhysicsBody3D.hpp  PhysicsObject.hpp  Transform.hpp  testComp.hpp
TestApp/SceneTest/Scenes/Assets/SceneInstances/: ShowCaseSceneInstance.hpp
TestApp/Scenes/Assets/Components/: testComp.hpp
TestApp/Scenes/Assets/Components/Bodies/: BodyContainer.hpp
TestApp/Scenes/Assets/SceneInstances/: ShowCaseSceneInstance.hpp
TestApp/Scenes/Assets/WorldInstances/: ShowCaseWorldInstance.hpp
Testbed/: Application.cpp  (+1 more)
src/: CMakeLists.txt
src/atlas/core/: application.cpp  application_instance.cpp  engine_logger.cpp  timer.cpp  window.cpp
src/atlas/core/event/: event.cpp
src/atlas/core/filesystem/: file_dialog.cpp
src/atlas/core/geometry/: mesh.cpp
src/atlas/core/image/: stb_image.cpp
src/atlas/core/math/: utilities.cpp
src/atlas/core/scene/: entity.cpp  scene.cpp  scene_object.cpp  world.cpp
src/atlas/core/serialize/: serializer.cpp  types.cpp
src/atlas/core/system/: camera.cpp  registry.cpp
src/atlas/core/system_framework/: system_registry.cpp
src/atlas/core/ui/: widgets.cpp
src/atlas/core/update_handlers/: global_update.cpp  sync_update.cpp  sync_update2.cpp  thread_manager.cpp  timer.cpp
src/atlas/core/utilities/: state.cpp
src/atlas/drivers/: graphics_context.cpp  index_buffer.cpp  render_context.cpp  render_pass.cpp  renderer_backend.cpp  shader.cpp  swapchain.cpp  vertex_buffer.cpp
src/atlas/drivers/ui/: imgui_backend.cpp
src/atlas/drivers/vulkan/: buffer_tutorial.cpp  descriptor_tutorial.cpp  helper_functions.cpp  vulkan_context.cpp  vulkan_core.cpp  vulkan_driver.cpp  vulkan_gpu.cpp  vulkan_index_buffer.cpp  vulkan_physical_driver.cpp  vulkan_renderer.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp  vulkan_uniform_buffer.cpp  vulkan_vertex_buffer.cpp  vulkan_window.cpp
src/atlas/drivers/vulkan-cpp/: helper_functions.cpp  mesh.cpp  vk_command_buffer.cpp  vk_context.cpp  vk_descriptor_set.cpp  vk_driver.cpp  vk_graphics_queue.cpp  vk_imgui.cpp  vk_index_buffer.cpp  vk_physical_driver.cpp  vk_pipeline.cpp  vk_present_queue.cpp  vk_renderer.cpp  vk_renderpass.cpp  vk_shader_group.cpp  vk_swapchain.cpp  vk_texture.cpp  vk_uniform_buffer.cpp  vk_vertex_buffer.cpp  vk_window.cpp
src/atlas/physics/: physics_engine.cpp  physics_scene.cpp
src/atlas/physics/jolt-cpp/: helper_functions.cpp  jolt-imports.cpp  jolt_api.cpp  jolt_collision.cpp  jolt_collision_manager.cpp  jolt_contact_listener.cpp  jolt_error_handler.cpp
src/atlas/physics/physics_3d/: physics.cpp  physics_api.cpp  physics_context.cpp  physics_engine.cpp
src/atlas/renderer/: renderer.cpp
src/atlas/thread_utils/: thread_utils.cpp
src/engine3d/Core/: Application.cpp  ApplicationInstance.cpp  Core.cpp  CoreInternal.cpp  EngineLogger.cpp  EntryPoint.cpp  Layer.cpp  LayerStack.cpp  Window.cpp  application_instance.cpp  engine_logger.cpp
src/engine3d/Core/ApplicationManager/: Scene.cpp  ThreadMngr.cpp  ThreadPool.cpp
src/engine3d/Core/Engine/: Engine3D.cpp
src/engine3d/Core/Event/: InputPoll.cpp
src/engine3d/Core/GraphicDrivers/: GraphicSwapchain.cpp  IndexBuffer.cpp  Mesh.cpp  Shader.cpp  UniformBuffer.cpp  VertexBuffer.cpp
src/engine3d/Core/Renderer/: Renderer.cpp  RendererBackend.cpp
src/engine3d/Core/Scene/: SceneObject.cpp
src/engine3d/Core/TimeManagement/: GlobalUpdateManager.cpp  Timer.cpp
src/engine3d/Core/UI/: UICore.cpp  UILayer.cpp
src/engine3d/Core/event/: input_poll.cpp
src/engine3d/Core/glad/: glad.c
src/engine3d/Core/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/engine3d/Core/internal/: CoreInternal.cpp  FrameTimer.cpp
src/engine3d/Core/update_handlers/: global_update_manager.cpp  thread_manager.cpp
src/engine3d/Event/: InputPoll.cpp
src/engine3d/Graphics/: Buffer.cpp  Framebuffer.cpp  Pipeline.cpp  Shader.cpp  SwapChain.cpp  Texture.cpp  VertexArray.cpp
src/engine3d/ImGui/: ImGuiLayer.cpp
src/engine3d/Image/: Image.cpp  stb_image.cpp
src/engine3d/Math/: Interpolation.cpp  Math.cpp
src/engine3d/OpenGL/: OpenGLBuffer.cpp  OpenGLFramebuffer.cpp  OpenGLShader.cpp  OpenGLSwapChain.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/engine3d/Physics/: BPLayerInterfaceHandler.cpp  JoltHandler.cpp
src/engine3d/Renderer/: Renderer.cpp
src/engine3d/Scene/: OrthographicCamera.cpp  OrthographicCameraController.cpp
src/engine3d/core/: application_instance.cpp  engine_logger.cpp  window.cpp
src/engine3d/core/event/: input_poll.cpp
src/engine3d/core/geometry/: mesh.cpp
src/engine3d/core/scene/: world.cpp
src/engine3d/core/system_framework/: system_registry.cpp
src/engine3d/core/update_handlers/: global_update.cpp  global_update_manager.cpp  sync_update.cpp  sync_update_manager.cpp  thread_manager.cpp  timer.cpp
src/engine3d/drivers/: Swapchain.cpp  index_buffer.cpp  renderer_backend.cpp  shader.cpp  vertex_buffer.cpp
src/engine3d/drivers/ui/: imgui_backend.cpp
src/engine3d/drivers/vulkan/: helper_functions.cpp  vulkan_context.cpp  vulkan_driver.cpp  vulkan_gpu.cpp  vulkan_index_buffer.cpp  vulkan_physical_driver.cpp  vulkan_renderer.cpp  vulkan_swapchain.cpp  vulkan_uniform_buffer.cpp  vulkan_vertex_buffer.cpp  vulkan_window.cpp
src/engine3d/renderer/: renderer.cpp
src/engine3d/scene/: scene.cpp  scene_node.cpp
src/engine3d/scene/ecs/: entity.cpp
src/engine3d/thread_utils/: thread_utils.cpp
(+535 files in other folders)
